--- a/examples/CR_Ar/database/utils/compose_species.ipynb
+++ b/examples/CR_Ar/database/utils/compose_species.ipynb
@@ -19,20 +19,9 @@
    "source": [
     "import os\n",
     "import json\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f3bb5b5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy import constants\n",
+    "import numpy as np\n",
     "\n",
-    "UNA = constants.Avogadro\n",
-    "eV_to_J = constants.eV"
+    "from scipy.constants import eV as eV_to_J"
    ]
   },
   {
@@ -45,16 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d1d709e8-d714-466b-aa2f-bfd235333a83",
    "metadata": {},
    "outputs": [],
    "source": [
     "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/run/Argon/argon_cr/data\"\n",
-    "# Molar masses [kg mol]\n",
-    "mm_e = 5.4858e-7\n",
-    "mm_Ar = 39.948e-3\n",
-    "mm_Arp = mm_Ar - mm_e"
+    "# Molar masses [kg/mol]\n",
+    "mm_em = 5.4858e-7\n",
+    "mm_Ar = 39.948e-3"
    ]
   },
   {
@@ -67,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7fa29e71",
    "metadata": {},
    "outputs": [],
@@ -88,27 +76,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3a315729",
    "metadata": {},
    "outputs": [],
    "source": [
     "electron = {\n",
     "  \"name\": \"e-\",\n",
-    "  \"m\": mm_e / UNA,\n",
-    "  \"charge\": -1,\n",
-    "  \"e_f\": 0.0,\n",
+    "  \"M\": mm_em,\n",
+    "  \"Z\": -1,      # Charge number\n",
+    "  \"Hf\": 0.0,\n",
     "  \"lev\": {\n",
-    "    \"g\": [2.0], # Include spin of electron\n",
-    "    \"e\": [0.0]\n",
+    "    \"g\": [2.0], # Electron spin contribution\n",
+    "    \"E\": [0.0]\n",
     "  },\n",
-    "  \"nb_lev\": 1\n",
+    "  \"nb_comp\": 1\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "769edad8",
    "metadata": {},
    "outputs": [],
@@ -127,42 +115,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8eacb16a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Levels\n",
-    "g, e = np.loadtxt(path_to_dtb+\"/Ei_Ar\", skiprows=1).T\n",
-    "e *= eV_to_J\n",
+    "g, E = np.loadtxt(path_to_dtb+\"/Ei_Ar\", skiprows=1).T\n",
+    "E *= eV_to_J\n",
     "# Angular momentum\n",
     "jc = np.loadtxt(path_to_dtb+\"/jc\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "206214d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "argon = {\n",
     "  \"name\": \"Ar\",\n",
-    "  \"m\": mm_Ar / UNA,\n",
-    "  \"charge\": 0,\n",
-    "  \"e_f\": 0.0,\n",
+    "  \"M\": mm_Ar,\n",
+    "  \"Z\": 0,\n",
+    "  \"Hf\": 0.0,\n",
     "  \"lev\": {\n",
     "    \"g\": g.tolist(),\n",
-    "    \"e\": e.tolist(),\n",
+    "    \"E\": E.tolist(),\n",
     "    \"jc\": jc.tolist()\n",
     "  },\n",
-    "  \"nb_lev\": len(g)\n",
+    "  \"nb_comp\": len(g)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9a40206a",
    "metadata": {},
    "outputs": [],
@@ -181,39 +169,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "81d6d32d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "g, e = np.loadtxt(path_to_dtb+\"/Ei_Arp\", skiprows=1).T\n",
-    "e *= eV_to_J"
+    "g, E = np.loadtxt(path_to_dtb+\"/Ei_Arp\", skiprows=1).T\n",
+    "E *= eV_to_J"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "1a073bf6",
    "metadata": {},
    "outputs": [],
    "source": [
     "argon_ion = {\n",
     "  \"name\": \"Ar+\",\n",
-    "  \"m\": mm_Arp / UNA,\n",
-    "  \"charge\": 1,\n",
-    "  \"e_f\": 0.0,\n",
+    "  \"M\": mm_Ar - mm_em,\n",
+    "  \"Z\": 1,\n",
+    "  \"Hf\": 0.0,\n",
     "  \"lev\": {\n",
     "    \"g\": g.tolist(),\n",
-    "    \"e\": e.tolist(),\n",
+    "    \"E\": E.tolist(),\n",
     "    \"jc\": [1.5, 0.5]\n",
     "  },\n",
-    "  \"nb_lev\": 2\n",
+    "  \"nb_comp\": 2\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "645513e0",
    "metadata": {},
    "outputs": [],
