--- a/examples/CR_Ar/database/utils/fit_kinetics.ipynb
+++ b/examples/CR_Ar/database/utils/fit_kinetics.ipynb
@@ -73,15 +73,17 @@
    "source": [
     "ARR_PARAM = (\"A\", \"beta\", \"Ta\")\n",
     "\n",
-    "# Arrhenius law\n",
+    "# Arrhenius law - Linear\n",
     "def fun(T, *args):\n",
     "  A, beta, Ta = args\n",
     "  return A * np.exp(beta*np.log(T) - Ta/T)\n",
     "\n",
+    "# Arrhenius law - Log\n",
     "def fun_ln(T, *args):\n",
     "  logA, beta, Ta = args\n",
     "  return logA + beta*np.log(T) - Ta/T\n",
     "\n",
+    "# Arrhenius law Jacobian - Log\n",
     "def jac_ln(T, *args):\n",
     "  return np.vstack([np.ones_like(T), np.log(T), -1/T]).T\n",
     "\n",
