--- a/examples/CR_Ar/database/utils/read_kinetics.ipynb
+++ b/examples/CR_Ar/database/utils/read_kinetics.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "path_to_species = \"./../species\"\n",
     "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/run/Argon/argon_cr/data\"\n",
-    "Tmin = 200"
+    "T_min = 250"
    ]
   },
   {
@@ -94,9 +94,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Tall = np.loadtxt(path_to_dtb+\"/T\", skiprows=4)\n",
-    "indices = np.where(Tall>Tmin)[0]\n",
-    "T = Tall[indices]"
+    "T_full = np.loadtxt(path_to_dtb+\"/T\", skiprows=4)\n",
+    "indices = np.where(T_full>T_min)[0]\n",
+    "T = T_full[indices]"
    ]
   },
   {
@@ -115,8 +115,8 @@
    "outputs": [],
    "source": [
     "nb_pts = len(indices)\n",
-    "nb_lev_Ar = species[\"Ar\"][\"nb_lev\"]\n",
-    "nb_lev_Arp = species[\"Ar+\"][\"nb_lev\"]"
+    "nb_comp_Ar = species[\"Ar\"][\"nb_comp\"]\n",
+    "nb_comp_Arp = species[\"Ar+\"][\"nb_comp\"]"
    ]
   },
   {
@@ -158,9 +158,9 @@
    "outputs": [],
    "source": [
     "def read_exc(name):\n",
-    "  X = np.zeros((nb_lev_Ar,1,nb_lev_Ar,1,nb_pts))\n",
-    "  for i in range(nb_lev_Ar):\n",
-    "    for j in range(i+1,nb_lev_Ar):\n",
+    "  X = np.zeros((nb_comp_Ar,1,nb_comp_Ar,1,nb_pts))\n",
+    "  for i in range(nb_comp_Ar):\n",
+    "    for j in range(i+1,nb_comp_Ar):\n",
     "      X[i,0,j,0] = np.loadtxt(path_to_dtb+f\"/{name}{i}_{j}\")[indices]\n",
     "  return X"
    ]
@@ -200,11 +200,11 @@
    "outputs": [],
    "source": [
     "def read_ion(name):\n",
-    "  X = np.zeros((nb_lev_Ar,1,nb_lev_Arp,1,1,nb_pts))\n",
-    "  for i in range(nb_lev_Ar):\n",
+    "  X = np.zeros((nb_comp_Ar,1,nb_comp_Arp,1,1,nb_pts))\n",
+    "  for i in range(nb_comp_Ar):\n",
     "    found = False\n",
     "    jc_i = species[\"Ar\"][\"lev\"][\"jc\"][i]\n",
-    "    for j in range(nb_lev_Arp):\n",
+    "    for j in range(nb_comp_Arp):\n",
     "      jc_j = species[\"Ar+\"][\"lev\"][\"jc\"][j]\n",
     "      # Ar+ and Ar_i must have the same value for the core angular momentum\n",
     "      if (jc_i == jc_j):\n",
