--- a/examples/CR_Ar/database/utils/compose_species.ipynb
+++ b/examples/CR_Ar/database/utils/compose_species.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "electron = {\n",
-    "  \"name\": \"e-\",\n",
+    "  \"name\": \"em\",\n",
     "  \"M\": mm_em,\n",
     "  \"Z\": -1,      # Charge number\n",
     "  \"Hf\": 0.0,\n",
@@ -186,7 +186,7 @@
    "outputs": [],
    "source": [
     "argon_ion = {\n",
-    "  \"name\": \"Ar+\",\n",
+    "  \"name\": \"Arp\",\n",
     "  \"M\": mm_Ar - mm_em,\n",
     "  \"Z\": 1,\n",
     "  \"Hf\": 0.0,\n",
