--- a/examples/CR_Ar/database/utils/fit_rates.ipynb
+++ b/examples/CR_Ar/database/utils/fit_rates.ipynb
@@ -20,10 +20,10 @@
     "import os\n",
     "import copy\n",
     "import numpy as np\n",
+    "import dill as pickle\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from scipy.optimize import curve_fit\n",
-    "from silx.io.dictdump import dicttoh5, h5todict"
+    "from scipy.optimize import curve_fit"
    ]
   },
   {
@@ -41,7 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_rates = \"./../kinetics/rates_raw.hdf5\""
+    "path_to_kin = \"./../rates/kin_raw.p\"\n",
+    "path_to_rad = \"./../rates/rad_raw.p\""
    ]
   },
   {
@@ -52,7 +53,7 @@
    "outputs": [],
    "source": [
     "# Save path\n",
-    "out_path = \"./../kinetics/\"\n",
+    "out_path = \"./../rates/\"\n",
     "os.makedirs(out_path, exist_ok=True)"
    ]
   },
@@ -99,7 +100,7 @@
     "  )\n",
     "}\n",
     "\n",
-    "# Fitting function\n",
+    "# Fitting functions\n",
     "def fit_rate(T, k):\n",
     "  indices = k > 0\n",
     "  T = T[indices]\n",
@@ -113,7 +114,22 @@
     "      **cfit_args\n",
     "    )[0]\n",
     "    param[0] = np.exp(param[0])\n",
+    "  return param\n",
+    "\n",
+    "def fit_rates(T, rates):\n",
+    "  shape = rates.shape[:-1]\n",
+    "  rates = rates.reshape(-1, len(T))\n",
+    "  param = np.stack([fit_rate(T, k) for k in rates], 1)\n",
+    "  param = {p: param[i].reshape(shape) for i, p in enumerate(ARR_PARAM)}\n",
     "  return param"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb7543be",
+   "metadata": {},
+   "source": [
+    "**Kinetics**"
    ]
   },
   {
@@ -123,8 +139,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rates_raw = h5todict(path_to_rates)\n",
-    "T = rates_raw[\"T\"]"
+    "kin_raw = pickle.load(open(path_to_kin, \"rb\"))\n",
+    "T = kin_raw[\"T\"]"
    ]
   },
   {
@@ -134,14 +150,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rates_fit = copy.deepcopy(rates_raw)\n",
-    "for (name, rates) in rates_raw.items():\n",
-    "  if (name not in (\"T\", \"A\", \"Rp\", \"ken\")):\n",
-    "    shape = rates.shape[:-1]\n",
-    "    rates = rates.reshape(-1, len(T))\n",
-    "    param = np.stack([fit_rate(T, k) for k in rates], 1)\n",
-    "    param = {p: param[i].reshape(shape) for i, p in enumerate(ARR_PARAM)}\n",
-    "    rates_fit[name] = param"
+    "kin_fit = copy.deepcopy(kin_raw)\n",
+    "for (name, rates) in kin_raw.items():\n",
+    "  if (name not in (\"T\", \"EN\", \"EI\")):\n",
+    "    kin_fit[name][\"values\"] = fit_rates(T, rates[\"values\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a15016c9",
+   "metadata": {},
+   "source": [
+    "**Radiation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4941ea16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rad_raw = pickle.load(open(path_to_rad, \"rb\"))\n",
+    "T = rad_raw[\"T\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "af818274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rad_fit = copy.deepcopy(rad_raw)\n",
+    "rad_fit[\"PI\"][\"values\"] = fit_rates(T, rad_raw[\"PI\"][\"values\"])"
    ]
   },
   {
@@ -154,34 +196,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7be9d394",
    "metadata": {},
    "outputs": [],
    "source": [
-    "FIT_RATES = (\"C\", \"K\", \"R\", \"S\", \"V\")"
+    "FIT_RATES = (\"PI\", \"EXe\", \"EXh\", \"Ie\", \"Ih\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "adcd6899",
    "metadata": {},
    "outputs": [],
    "source": [
     "def pick_rate():\n",
     "  name = np.random.choice(FIT_RATES)\n",
-    "  size = rates_fit[name][\"A\"].size\n",
+    "  dtb = rad_fit if (name == \"PI\") else kin_fit\n",
+    "  size = dtb[name][\"values\"][\"A\"].size\n",
     "  rate = 0.0\n",
     "  while rate == 0.0:\n",
     "    i = np.random.choice(size)\n",
-    "    rate = rates_fit[name][\"A\"].reshape(-1)[i]\n",
+    "    rate = dtb[name][\"values\"][\"A\"].reshape(-1)[i]\n",
     "  return name, i\n",
     "\n",
     "def compute_rates(name, i):\n",
-    "  param = [rates_fit[name][p].reshape(-1)[i] for p in ARR_PARAM]\n",
+    "  dtb_fit = rad_fit if (name == \"PI\") else kin_fit\n",
+    "  dtb_raw = rad_raw if (name == \"PI\") else kin_raw\n",
+    "  param = [dtb_fit[name][\"values\"][p].reshape(-1)[i] for p in ARR_PARAM]\n",
     "  k_fit = fun(T, *param)\n",
-    "  k_raw = rates_raw[name].reshape(-1, len(T))[i]\n",
+    "  k_raw = dtb_raw[name][\"values\"].reshape(-1, len(T))[i]\n",
     "  return k_fit, k_raw"
    ]
   },
@@ -219,12 +264,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "542fa3d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dicttoh5(rates_fit, out_path + \"/rates_fit.hdf5\")"
+    "pickle.dump(kin_fit, open(out_path + \"/kin_fit.p\", \"wb\"))\n",
+    "pickle.dump(rad_fit, open(out_path + \"/rad_fit.p\", \"wb\"))"
    ]
   }
  ],
