--- a/examples/CR_Ar/database/utils/read_rates.ipynb
+++ b/examples/CR_Ar/database/utils/read_rates.ipynb
@@ -20,8 +20,7 @@
     "import os\n",
     "import json\n",
     "import numpy as np\n",
-    "\n",
-    "from silx.io.dictdump import dicttoh5"
+    "import dill as pickle"
    ]
   },
   {
@@ -52,7 +51,7 @@
    "outputs": [],
    "source": [
     "# Save path\n",
-    "out_path = \"./../kinetics/\"\n",
+    "out_path = \"./../rates/\"\n",
     "os.makedirs(out_path, exist_ok=True)"
    ]
   },
@@ -116,25 +115,25 @@
    "source": [
     "nb_pts = len(indices)\n",
     "nb_comp_Ar = species[\"Ar\"][\"nb_comp\"]\n",
-    "nb_comp_Arp = species[\"Ar+\"][\"nb_comp\"]"
+    "nb_comp_Arp = species[\"Arp\"][\"nb_comp\"]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "546b7332",
+   "id": "cba92dfb",
    "metadata": {},
    "source": [
-    "Read rates"
+    "**Kinetics**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e7e57dcc",
+   "id": "84d471c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rates = {\"T\": T}"
+    "kin = {\"T\": T}"
    ]
   },
   {
@@ -142,11 +141,9 @@
    "id": "acaad4c1",
    "metadata": {},
    "source": [
-    "**Excitation**\n",
-    "\n",
-    "- Electron impact excitation:\n",
+    "- Excitation by electron impact (`EXe`):\n",
     "$$\\quad \\text{Ar}(i) + \\text{e}^- \\xrightleftharpoons[F_{ji}]{C_{ij}} \\text{Ar}(j) + \\text{e}^-; \\quad j > i$$\n",
-    "- Heavy-particle impact excitation:\n",
+    "- Excitation by heavy-particle impact (`EXh`):\n",
     "$$\\quad \\text{Ar}(i) + \\text{Ar}(1) \\xrightleftharpoons[L_{ji}]{K_{ij}} \\text{Ar}(j) + \\text{Ar}(1); \\quad j > i$$"
    ]
   },
@@ -168,15 +165,21 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d3cb62c7",
+   "id": "688421e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name in (\"C\", \"K\"):\n",
-    "  rates[name] = read_exc(name)\n",
+    "kin[\"EXe\"] = {\n",
+    "  \"values\": read_exc(\"C\"),\n",
+    "  \"equation\": \"Ar(*)+em=Ar(*)+em\"\n",
+    "}\n",
+    "kin[\"EXh\"] = {\n",
+    "  \"values\": read_exc(\"K\"),\n",
+    "  \"equation\": \"Ar(*)+Ar(0)=Ar(*)+Ar(0)\"\n",
+    "}\n",
     "# Correction factor applied to the rate from the ground state (i=0)\n",
     "# See: M. G. Kapper's PhD thesis (2009)\n",
-    "rates[\"K\"][0,0,:,0] *= 0.085"
+    "kin[\"EXh\"][\"values\"][0,0,:,0] *= 0.085"
    ]
   },
   {
@@ -184,11 +187,9 @@
    "id": "c408ca3b",
    "metadata": {},
    "source": [
-    "**Ionization**\n",
-    "\n",
-    "- Electron impact ionization:\n",
+    "- Ionization by electron impact (`Ie`)\n",
     "$$\\quad \\text{Ar}(i) + \\text{e}^- \\xrightleftharpoons[O_{ji}]{S_{ij}} \\text{Ar}^+(j) + \\text{e}^- + \\text{e}^-$$\n",
-    "- Heavy-particle impact ionization:\n",
+    "- Ionization by heavy-particle impact (`Ih`)\n",
     "$$\\quad \\text{Ar}(i) + \\text{Ar}(1) \\xrightleftharpoons[W_{ji}]{V_{ij}} \\text{Ar}^+(j) + \\text{e}^- + \\text{Ar}(1)$$"
    ]
   },
@@ -205,7 +206,7 @@
     "    found = False\n",
     "    jc_i = species[\"Ar\"][\"lev\"][\"jc\"][i]\n",
     "    for j in range(nb_comp_Arp):\n",
-    "      jc_j = species[\"Ar+\"][\"lev\"][\"jc\"][j]\n",
+    "      jc_j = species[\"Arp\"][\"lev\"][\"jc\"][j]\n",
     "      # Ar+ and Ar_i must have the same value for the core angular momentum\n",
     "      if (jc_i == jc_j):\n",
     "        found = True\n",
@@ -223,8 +224,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name in (\"S\", \"V\"):\n",
-    "  rates[name] = read_ion(name)"
+    "kin[\"Ie\"] = {\n",
+    "  \"values\": read_ion(\"S\"),\n",
+    "  \"equation\": \"Ar(*)+em=Arp(*)+em+em\"\n",
+    "}\n",
+    "kin[\"Ih\"] = {\n",
+    "  \"values\": read_ion(\"V\"),\n",
+    "  \"equation\": \"Ar(*)+Ar(0)=Arp(*)+em+Ar(0)\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "159b8de6",
+   "metadata": {},
+   "source": [
+    "- Electron-neutral collision rate (First moment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c6e980e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kin[\"EN\"] = {\n",
+    "  \"values\": np.loadtxt(path_to_dtb+\"/ken\")[indices],\n",
+    "  \"equation\": None,\n",
+    "  # Curve fit model (Gupta)\n",
+    "  \"Q11_fit\": np.array([\n",
+    "    +0.13742e0,\n",
+    "    -3.62064e0,\n",
+    "    +3.14457e1,\n",
+    "    -8.69558e1\n",
+    "  ])\n",
+    "}\n",
+    "kin[\"EI\"] = {\n",
+    "  \"values\": None,\n",
+    "  \"equation\": None,\n",
+    "  # Curve fit model (Magin's PhD thesis, ULB, 2004)\n",
+    "  \"Q11_fit\": np.array([\n",
+    "    -1.67070199e-4,\n",
+    "    +4.87662165e-3,\n",
+    "    -6.34929831e-2,\n",
+    "    +5.49816993e-1,\n",
+    "    -7.91157696e-1\n",
+    "  ])\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37b850b8",
+   "metadata": {},
+   "source": [
+    "**Radiation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b6293884",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rad = {\"T\": T}"
    ]
   },
   {
@@ -232,20 +297,21 @@
    "id": "4a433e14",
    "metadata": {},
    "source": [
-    "**Radiation**\n",
-    "\n",
     "Radiation absorption is taken into account via the use of escape $\\Lambda_{ij}$ factors that can take values between 0 (optically thick plasma) and 1 (optically thin plasma). An optically thin plasma is considered here ($\\Lambda_{ij}=1$).\n",
     "- Spontaneous emission (bound-bound): $$\\quad \\text{Ar}(i) + h\\nu_{ij} \\xrightleftharpoons[\\Lambda_{ij}A_{ij}]{(1-\\Lambda_{ij})A_{ij}} \\text{Ar}(j)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "8d19cc86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rates[\"A\"] = np.loadtxt(path_to_dtb+\"/A\")"
+    "rad[\"BB\"] =  {\n",
+    "  \"values\": np.loadtxt(path_to_dtb+\"/A\"),\n",
+    "  \"equation\": \"Ar(*)=Ar(*)\"\n",
+    "}"
    ]
   },
   {
@@ -259,32 +325,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "20386ade",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name in (\"R\", \"Rp\"):\n",
-    "  rates[name] = read_ion(name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "159b8de6",
-   "metadata": {},
-   "source": [
-    "**First moments**\n",
-    "- Electron-neutral collision rate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "c6e980e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rates[\"ken\"] = np.loadtxt(path_to_dtb+\"/ken\")[indices]"
+    "rad[\"PI\"] =  {\n",
+    "  \"values\": read_ion(\"R\"),\n",
+    "  \"equation\": \"Ar(*)=Arp(*)+em\"\n",
+    "}\n",
+    "# First moment\n",
+    "rad[\"PIp\"] =  {\n",
+    "  \"values\": read_ion(\"Rp\"),\n",
+    "  \"equation\": \"Ar(*)=Arp(*)+em\"\n",
+    "}"
    ]
   },
   {
@@ -297,12 +351,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "5f3c772f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dicttoh5(rates, out_path + \"/rates_raw.hdf5\")"
+    "pickle.dump(kin, open(out_path + \"/kin_raw.p\", \"wb\"))\n",
+    "pickle.dump(rad, open(out_path + \"/rad_raw.p\", \"wb\"))"
    ]
   }
  ],
