--- a/examples/CR_Ar/database/utils/compose_species.ipynb
+++ b/examples/CR_Ar/database/utils/compose_species.ipynb
@@ -21,7 +21,7 @@
     "import json\n",
     "import numpy as np\n",
     "\n",
-    "from scipy.constants import eV as eV_to_J"
+    "from scipy.constants import eV"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "source": [
     "# Levels\n",
     "g, E = np.loadtxt(path_to_dtb+\"/Ei_Ar\", skiprows=1).T\n",
-    "E *= eV_to_J\n",
+    "E *= eV\n",
     "# Angular momentum\n",
     "jc = np.loadtxt(path_to_dtb+\"/jc\")"
    ]
@@ -175,7 +175,7 @@
    "outputs": [],
    "source": [
     "g, E = np.loadtxt(path_to_dtb+\"/Ei_Arp\", skiprows=1).T\n",
-    "E *= eV_to_J"
+    "E *= eV"
    ]
   },
   {
