--- a/examples/CR_Ar/database/utils/fit_rates.ipynb
+++ b/examples/CR_Ar/database/utils/fit_rates.ipynb
@@ -20,10 +20,58 @@
     "import os\n",
     "import copy\n",
     "import numpy as np\n",
+    "import scipy as sp\n",
     "import dill as pickle\n",
-    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "212a8796",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Constants\n",
     "\n",
-    "from scipy.optimize import curve_fit"
+    "# # See: https://physics.nist.gov/cuu/Constants\n",
+    "# from scipy import constants\n",
+    "# from scipy.constants import physical_constants as pc\n",
+    "\n",
+    "# # Universal constants\n",
+    "# # -------------------------------------\n",
+    "# UH        = pc[\"Planck constant\"][0]               # [J/Hz]\n",
+    "# UHT       = pc[\"reduced Planck constant\"][0]       # [J*s]\n",
+    "# UEPS0     = pc[\"vacuum electric permittivity\"][0]  # [F/m]\n",
+    "# UMU0      = pc[\"vacuum mag. permeability\"][0]      # [N/A^2]\n",
+    "# UC0       = pc[\"speed of light in vacuum\"][0]      # [m/s]\n",
+    "\n",
+    "# # Physico-chemical constants\n",
+    "# # -------------------------------------\n",
+    "# UAMU      = pc[\"atomic mass constant\"][0]          # [kg]\n",
+    "# UNA       = pc[\"Avogadro constant\"][0]             # [1/mol]\n",
+    "# UKB       = pc[\"Boltzmann constant\"][0]            # [J/K]\n",
+    "# URG       = pc[\"molar gas constant\"][0]            # [J/(mol*K)]\n",
+    "\n",
+    "# # Atomic and nuclear constants\n",
+    "# # -------------------------------------\n",
+    "# UE        = pc[\"elementary charge\"][0]             # [C]\n",
+    "# GEM       = pc[\"electron g factor\"][0]             # []\n",
+    "# UME       = pc[\"electron mass\"][0]                 # [kg]\n",
+    "# UMME      = pc[\"electron molar mass\"][0]           # [kg/mol]\n",
+    "# UALPHA    = pc[\"fine-structure constant\"][0]       # []\n",
+    "# UA0       = pc[\"Bohr radius\"][0]                   # [m]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Constants\n",
+    "from scipy.constants import physical_constants as pc\n",
+    "\n",
+    "UEPS0 = pc[\"vacuum electric permittivity\"][0]\n",
+    "UNA   = pc[\"Avogadro constant\"][0]\n",
+    "UKB   = pc[\"Boltzmann constant\"][0]\n",
+    "UME   = pc[\"electron mass\"][0]\n",
+    "UE    = pc[\"elementary charge\"][0]"
    ]
   },
   {
@@ -36,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dab0a1be",
    "metadata": {},
    "outputs": [],
@@ -47,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7fa29e71",
    "metadata": {},
    "outputs": [],
@@ -62,12 +110,13 @@
    "id": "35a577e2",
    "metadata": {},
    "source": [
-    "Fit functions and parameters"
+    "Fit functions and parameters\n",
+    "> Arrhenius law"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ec63af40",
    "metadata": {},
    "outputs": [],
@@ -75,25 +124,25 @@
     "ARR_PARAM = (\"A\", \"beta\", \"Ta\")\n",
     "\n",
     "# Arrhenius law - Linear\n",
-    "def fun(T, *args):\n",
-    "  A, beta, Ta = args\n",
+    "def arrhenius(T, *c):\n",
+    "  A, beta, Ta = c\n",
     "  return A * np.exp(beta*np.log(T) - Ta/T)\n",
     "\n",
     "# Arrhenius law - Log\n",
-    "def fun_ln(T, *args):\n",
-    "  logA, beta, Ta = args\n",
+    "def arrhenius_ln(T, *c):\n",
+    "  logA, beta, Ta = c\n",
     "  return logA + beta*np.log(T) - Ta/T\n",
     "\n",
     "# Arrhenius law Jacobian - Log\n",
-    "def jac_ln(T, *args):\n",
+    "def arrhenius_ln_jac(T, *c):\n",
     "  return np.vstack([np.ones_like(T), np.log(T), -1/T]).T\n",
     "\n",
     "# Curve fit arguments\n",
     "cfit_args = {\n",
-    "  \"f\": fun_ln,\n",
+    "  \"f\": arrhenius_ln,\n",
     "  \"p0\": [-20, 0, 1e3],\n",
     "  \"method\": \"trf\",\n",
-    "  \"jac\": jac_ln,\n",
+    "  \"jac\": arrhenius_ln_jac,\n",
     "  \"bounds\": (\n",
     "    [-np.inf, -np.inf,   0], # Lower bounds\n",
     "    [     -5,  np.inf, 1e6]  # Upper bounds\n",
@@ -108,7 +157,7 @@
     "  if (len(T) < 4):\n",
     "    param = np.zeros((3,))\n",
     "  else:\n",
-    "    param = curve_fit(\n",
+    "    param = sp.optimize.curve_fit(\n",
     "      xdata=T,\n",
     "      ydata=k,\n",
     "      **cfit_args\n",
@@ -120,8 +169,50 @@
     "  shape = rates.shape[:-1]\n",
     "  rates = rates.reshape(-1, len(T))\n",
     "  param = np.stack([fit_rate(T, k) for k in rates], 1)\n",
-    "  param = {p: param[i].reshape(shape) for i, p in enumerate(ARR_PARAM)}\n",
+    "  param = {p: param[i].reshape(shape) for (i, p) in enumerate(ARR_PARAM)}\n",
     "  return param"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bd4e35b",
+   "metadata": {},
+   "source": [
+    "> Electron-neutral collision rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cf9334cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_ve(T):\n",
+    "  # Electron mean thermal velocity\n",
+    "  return np.sqrt((8.0*UKB*T)/(np.pi*UME))\n",
+    "\n",
+    "def coll_int_to_rate_ln(T, Q, f=1.0):\n",
+    "  # Convert from Q (collision integral) to k (collision rate)\n",
+    "  return np.log(f * compute_ve(T) * Q)\n",
+    "  \n",
+    "def coll_rate_en_ln(T, c):\n",
+    "  # > See: Capitelli, M., Bruno, D., Laricchiuta, A.,\n",
+    "  #        \"Fundamental Aspects of Plasma Physics: Transport\",\n",
+    "  #        Spinger, 2013, Eq. 11.3\n",
+    "  # Common factors\n",
+    "  lnT = np.log(T)\n",
+    "  fac = np.exp((lnT - c[0])/c[1])\n",
+    "  # Collision integral [m^2]\n",
+    "  Qen = c[2]*lnT**c[5]*fac/(fac + 1.0/fac) \\\n",
+    "      + c[6]*np.exp(-((lnT - c[7])/c[8])**2) \\\n",
+    "      + c[3] + c[9]*lnT**c[4]\n",
+    "  Qen *= 1e-20 * np.pi\n",
+    "  # Collision rate\n",
+    "  return coll_int_to_rate_ln(T, Qen, f=8.0/3.0)\n",
+    "\n",
+    "def coll_rate_en_ln_data(dtb):\n",
+    "  return np.log(2.0*dtb[\"EN\"][\"values\"])"
    ]
   },
   {
@@ -134,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "f75dae27",
    "metadata": {},
    "outputs": [],
@@ -145,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "13798581",
    "metadata": {},
    "outputs": [],
@@ -158,6 +249,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7b88bbc6",
+   "metadata": {},
+   "source": [
+    "Electron-neutrals collision rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c8c33aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param = sp.optimize.leastsq(\n",
+    "  func=lambda c: coll_rate_en_ln_data(kin_raw) - coll_rate_en_ln(T, c),\n",
+    "  x0=kin_raw[\"EN\"][\"Q11_fit\"],\n",
+    "  maxfev=int(1e5)\n",
+    ")\n",
+    "kin_fit[\"EN\"][\"Q11_fit\"] = param[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a15016c9",
    "metadata": {},
    "source": [
@@ -166,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "4941ea16",
    "metadata": {},
    "outputs": [],
@@ -177,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "af818274",
    "metadata": {},
    "outputs": [],
@@ -196,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "7be9d394",
    "metadata": {},
    "outputs": [],
@@ -206,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "adcd6899",
    "metadata": {},
    "outputs": [],
@@ -225,7 +339,7 @@
     "  dtb_fit = rad_fit if (name == \"PI\") else kin_fit\n",
     "  dtb_raw = rad_raw if (name == \"PI\") else kin_raw\n",
     "  param = [dtb_fit[name][\"values\"][p].reshape(-1)[i] for p in ARR_PARAM]\n",
-    "  k_fit = fun(T, *param)\n",
+    "  k_fit = arrhenius(T, *param)\n",
     "  k_raw = dtb_raw[name][\"values\"].reshape(-1, len(T))[i]\n",
     "  return k_fit, k_raw"
    ]
@@ -255,6 +369,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7bbf1e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = kin_fit[\"EN\"][\"Q11_fit\"]\n",
+    "k_fit = np.exp(coll_rate_en_ln(T, c))\n",
+    "k_raw = np.exp(coll_rate_en_ln_data(kin_raw))\n",
+    "plt.semilogy(T, k_fit, label=\"Fit\")\n",
+    "plt.semilogy(T, k_raw, label=\"Raw\")\n",
+    "plt.title(f\"Electron-neutral collision rate\")\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "plt.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f089472e",
    "metadata": {},
@@ -264,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "542fa3d2",
    "metadata": {},
    "outputs": [],
