--- a/examples/CR_Ar/database/utils/read_rates.ipynb
+++ b/examples/CR_Ar/database/utils/read_rates.ipynb
@@ -252,18 +252,26 @@
     "kin[\"EN\"] = {\n",
     "  \"values\": np.loadtxt(path_to_dtb+\"/ken\")[indices],\n",
     "  \"equation\": None,\n",
-    "  # Curve fit model (Gupta)\n",
+    "  # Curve fit model\n",
+    "  # > See: Capitelli et al., https://doi.org/10.1007/978-1-4419-8172-1, Eq. 11.3\n",
     "  \"Q11_fit\": np.array([\n",
-    "    +0.13742e0,\n",
-    "    -3.62064e0,\n",
-    "    +3.14457e1,\n",
-    "    -8.69558e1\n",
+    "    +8.8972699e+0,\n",
+    "    +1.5224377e+0,\n",
+    "    +2.4749525e+0,\n",
+    "    -2.0999602e+0,\n",
+    "    -1.0000000e+0,\n",
+    "    +0.0000000e+0,\n",
+    "    +2.2908023e+0,\n",
+    "    +1.0598130e+1,\n",
+    "    -9.5311431e-1,\n",
+    "    +1.4563107e+1\n",
     "  ])\n",
     "}\n",
     "kin[\"EI\"] = {\n",
     "  \"values\": None,\n",
     "  \"equation\": None,\n",
-    "  # Curve fit model (Magin's PhD thesis, ULB, 2004)\n",
+    "  # Curve fit model\n",
+    "  # > See: Magin's PhD thesis, ULB, 2004\n",
     "  \"Q11_fit\": np.array([\n",
     "    -1.67070199e-4,\n",
     "    +4.87662165e-3,\n",
