--- a/examples/CR_Ar/database/utils/compose_species.ipynb
+++ b/examples/CR_Ar/database/utils/compose_species.ipynb
@@ -19,9 +19,20 @@
    "source": [
     "import os\n",
     "import json\n",
-    "import numpy as np\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "27f67bc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.constants import physical_constants as pc\n",
     "\n",
-    "from scipy.constants import eV"
+    "UE   = pc[\"elementary charge\"][0]\n",
+    "UMME = pc[\"electron molar mass\"][0]"
    ]
   },
   {
@@ -34,15 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d1d709e8-d714-466b-aa2f-bfd235333a83",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/run/Argon/argon_cr/data\"\n",
-    "# Molar masses [kg/mol]\n",
-    "mm_em = 5.4858e-7\n",
-    "mm_Ar = 39.948e-3"
+    "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/run/Argon/argon_cr/data\""
    ]
   },
   {
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7fa29e71",
    "metadata": {},
    "outputs": [],
@@ -76,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3a315729",
    "metadata": {},
    "outputs": [],
    "source": [
     "electron = {\n",
     "  \"name\": \"em\",\n",
-    "  \"M\": mm_em,\n",
+    "  \"M\": UMME,\n",
     "  \"Z\": -1,      # Charge number\n",
     "  \"Hf\": 0.0,\n",
     "  \"lev\": {\n",
@@ -96,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "769edad8",
    "metadata": {},
    "outputs": [],
@@ -115,28 +123,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8eacb16a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Levels\n",
     "g, E = np.loadtxt(path_to_dtb+\"/Ei_Ar\", skiprows=1).T\n",
-    "E *= eV\n",
+    "E *= UE\n",
     "# Angular momentum\n",
     "jc = np.loadtxt(path_to_dtb+\"/jc\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "206214d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "argon = {\n",
     "  \"name\": \"Ar\",\n",
-    "  \"M\": mm_Ar,\n",
+    "  \"M\": 39.948e-3,\n",
     "  \"Z\": 0,\n",
     "  \"Hf\": 0.0,\n",
     "  \"lev\": {\n",
@@ -150,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9a40206a",
    "metadata": {},
    "outputs": [],
@@ -169,25 +177,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "81d6d32d",
    "metadata": {},
    "outputs": [],
    "source": [
     "g, E = np.loadtxt(path_to_dtb+\"/Ei_Arp\", skiprows=1).T\n",
-    "E *= eV"
+    "E *= UE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "1a073bf6",
    "metadata": {},
    "outputs": [],
    "source": [
     "argon_ion = {\n",
     "  \"name\": \"Arp\",\n",
-    "  \"M\": mm_Ar - mm_em,\n",
+    "  \"M\": argon[\"M\"] - UMME,\n",
     "  \"Z\": 1,\n",
     "  \"Hf\": 0.0,\n",
     "  \"lev\": {\n",
@@ -201,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "645513e0",
    "metadata": {},
    "outputs": [],
