--- a/ronek/argon_plasma/test_species.ipynb
+++ b/ronek/argon_plasma/test_species.ipynb
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kin.rates[\"EN\"]"
+    "kin.rates[\"EN\"], kin.rates[\"EI\"]"
    ]
   },
   {
@@ -164,16 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kin.rates['Ih']['fwd'] * np.random.rand(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,26 +186,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kin2.rates[\"EN\"]"
+    "kin2.rates[\"EN\"], kin2.rates[\"EI\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for Ti in np.linspace(500, 50000, 100):\n",
-    "    kin.update(T, Ti)\n",
-    "    k1 = kin.rates[\"EN\"]\n",
-    "    kin2.update(T, Ti)\n",
-    "    k2 = kin2.rates[\"EN\"]\n",
-    "    print(np.abs(k1-k2)/k1*100)"
+    "# for Ti in np.linspace(500, 50000, 100):\n",
+    "#     kin.update(T, Ti)\n",
+    "#     k1 = kin.rates[\"EN\"]\n",
+    "#     kin2.update(T, Ti)\n",
+    "#     k2 = kin2.rates[\"EN\"]\n",
+    "#     print(np.abs(k1-k2)/k1*100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,16 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kops = model.compose_kin_ops(T, Te)"
+    "kops = model._compose_kin_ops(T, Te)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
