--- a/examples/CR_Ar/database/utils/compose_species.ipynb
+++ b/examples/CR_Ar/database/utils/compose_species.ipynb
@@ -29,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Constants\n",
     "from scipy.constants import physical_constants as pc\n",
     "\n",
     "UE   = pc[\"elementary charge\"][0]\n",
