--- a/examples/CR_Ar/database/utils/rates_fit.ipynb
+++ b/examples/CR_Ar/database/utils/rates_fit.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "### Collisional-radiative model for Argon Plasma\n",
-    "#### Kinetics fitting\n",
+    "#### Rates fitting\n",
     "See: https://doi.org/10.1063/1.3585688"
    ]
   },
@@ -32,38 +32,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Constants\n",
-    "\n",
-    "# # See: https://physics.nist.gov/cuu/Constants\n",
-    "# from scipy import constants\n",
-    "# from scipy.constants import physical_constants as pc\n",
-    "\n",
-    "# # Universal constants\n",
-    "# # -------------------------------------\n",
-    "# UH        = pc[\"Planck constant\"][0]               # [J/Hz]\n",
-    "# UHT       = pc[\"reduced Planck constant\"][0]       # [J*s]\n",
-    "# UEPS0     = pc[\"vacuum electric permittivity\"][0]  # [F/m]\n",
-    "# UMU0      = pc[\"vacuum mag. permeability\"][0]      # [N/A^2]\n",
-    "# UC0       = pc[\"speed of light in vacuum\"][0]      # [m/s]\n",
-    "\n",
-    "# # Physico-chemical constants\n",
-    "# # -------------------------------------\n",
-    "# UAMU      = pc[\"atomic mass constant\"][0]          # [kg]\n",
-    "# UNA       = pc[\"Avogadro constant\"][0]             # [1/mol]\n",
-    "# UKB       = pc[\"Boltzmann constant\"][0]            # [J/K]\n",
-    "# URG       = pc[\"molar gas constant\"][0]            # [J/(mol*K)]\n",
-    "\n",
-    "# # Atomic and nuclear constants\n",
-    "# # -------------------------------------\n",
-    "# UE        = pc[\"elementary charge\"][0]             # [C]\n",
-    "# GEM       = pc[\"electron g factor\"][0]             # []\n",
-    "# UME       = pc[\"electron mass\"][0]                 # [kg]\n",
-    "# UMME      = pc[\"electron molar mass\"][0]           # [kg/mol]\n",
-    "# UALPHA    = pc[\"fine-structure constant\"][0]       # []\n",
-    "# UA0       = pc[\"Bohr radius\"][0]                   # [m]\n",
-    "\n",
-    "\n",
-    "\n",
     "# Constants\n",
     "from scipy.constants import physical_constants as pc\n",
     "\n",
