--- a/examples/CR_Ar/database/utils/rates_read.ipynb
+++ b/examples/CR_Ar/database/utils/rates_read.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "### Collisional-radiative model for Argon Plasma\n",
-    "#### Kinetics loading\n",
+    "#### Rates reading\n",
     "See: https://doi.org/10.1063/1.3585688"
    ]
   },
