--- a/ronek/plasmas/test.ipynb
+++ b/ronek/plasmas/test.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -17,7 +18,7 @@
    "outputs": [],
    "source": [
     "sys.path.append(\"/home/zanardi/Codes/ML/RONEK/ronek/\")\n",
-    "from ronek.argon_plasma.model import Model"
+    "from ronek.plasmas import ArgonCR"
    ]
   },
   {
@@ -35,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Model(\n",
+    "model = ArgonCR(\n",
     "  species={k: path_to_dtb + \"/species/\" + k + \".json\" for k in (\"Ar\", \"Arp\", \"em\")},\n",
     "  kin_dtb=path_to_dtb + \"/rates/kin_fit.p\",\n",
     "  use_coll_int_fit=True\n",
@@ -48,7 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p0, T0, T = 1e3, 3e2, 3e4"
+    "p0, T0, T = 1e2, 5e2, 3e4\n",
+    "w, rho = model.get_init_composition(p0, T0, noise=False)"
    ]
   },
   {
@@ -57,20 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w, rho = model.mix.get_init_composition(p0, T0, noise=False)\n",
-    "# model.mix.update_composition(w, rho)\n",
-    "# model.mix.update_species_thermo(T, T0)\n",
-    "# model.mix.update_mixture_thermo()\n",
-    "pe = w[-1] * rho * model.mix.species[\"em\"].R * T0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = np.geomspace(1e-8,1e-1,499)\n",
+    "t = np.geomspace(1e-8,1e0,499)\n",
     "t = np.insert(t, 0, 0)"
    ]
   },
@@ -80,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y0 = np.concatenate([w, np.array(T).reshape(1), np.array(pe).reshape(1)])\n",
+    "y0 = np.concatenate([w, np.array(T).reshape(1), np.array(T0).reshape(1)])\n",
     "y0, rho"
    ]
   },
@@ -90,43 +79,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model._fun(0.0, y0, rho)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = model.solve(t, y0, rho)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "y = model.solve(t, y0, rho)\n",
     "y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.semilogx(t, y[-2], t, y[-1])"
+    "plt.semilogx(t, y[-2:].T)"
    ]
   },
   {
@@ -136,15 +99,6 @@
    "outputs": [],
    "source": [
     "plt.loglog(t, y[:31].T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.semilogx(t, y[-2])"
    ]
   }
  ],
