--- a/ronek/plasmas/test.ipynb
+++ b/ronek/plasmas/test.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p0, T0, T = 1e2, 5e2, 3e4\n",
+    "p0, T0, T = 1e2, 3e2, 3e4\n",
     "w, rho = model.get_init_composition(p0, T0, noise=False)"
    ]
   },
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = np.geomspace(1e-8,1e0,499)\n",
+    "t = np.geomspace(1e-12,1e0,499)\n",
     "t = np.insert(t, 0, 0)"
    ]
   },
@@ -99,6 +99,24 @@
    "outputs": [],
    "source": [
     "plt.loglog(t, y[:31].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.loglog(t, y[31:33].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.loglog(t, y[-3].T)"
    ]
   }
  ],
