--- a/ronek/plasmas/test.ipynb
+++ b/ronek/plasmas/test.ipynb
@@ -39,7 +39,8 @@
     "model = ArgonCR(\n",
     "  species={k: path_to_dtb + \"/species/\" + k + \".json\" for k in (\"Ar\", \"Arp\", \"em\")},\n",
     "  kin_dtb=path_to_dtb + \"/rates/kin_fit.p\",\n",
-    "  use_coll_int_fit=True\n",
+    "  use_coll_int_fit=True,\n",
+    "  use_pe=True\n",
     ")"
    ]
   },
@@ -59,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = np.geomspace(1e-12,1e0,499)\n",
+    "t = np.geomspace(1e-12, 1e0, 499)\n",
     "t = np.insert(t, 0, 0)"
    ]
   },
