--- a/examples/CR_Ar/database/utils/rates_fit.ipynb
+++ b/examples/CR_Ar/database/utils/rates_fit.ipynb
@@ -163,11 +163,9 @@
     "def coll_int_to_rate_ln(T, Q, f=1.0):\n",
     "  # Convert from Q (collision integral) to k (collision rate)\n",
     "  return np.log(f * compute_ve(T) * Q)\n",
-    "  \n",
+    "\n",
     "def coll_rate_en_ln(T, c):\n",
-    "  # > See: Capitelli, M., Bruno, D., Laricchiuta, A.,\n",
-    "  #        \"Fundamental Aspects of Plasma Physics: Transport\",\n",
-    "  #        Spinger, 2013, Eq. 11.3\n",
+    "  # > See: https://doi.org/10.1007/978-1-4419-8172-1 - Eq. 11.3\n",
     "  # Common factors\n",
     "  lnT = np.log(T)\n",
     "  fac = np.exp((lnT - c[0])/c[1])\n",
