--- a/examples/CR_Ar/database/utils/rates_read.ipynb
+++ b/examples/CR_Ar/database/utils/rates_read.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "path_to_species = \"./../species\"\n",
     "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/run/Argon/argon_cr/data\"\n",
-    "T_min = 250"
+    "T_min = 200"
    ]
   },
   {
@@ -170,10 +170,12 @@
    "outputs": [],
    "source": [
     "kin[\"EXe\"] = {\n",
+    "  \"plato_id\": 7,\n",
     "  \"values\": read_exc(\"C\"),\n",
     "  \"equation\": \"Ar(*)+em=Ar(*)+em\"\n",
     "}\n",
     "kin[\"EXh\"] = {\n",
+    "  \"plato_id\": 5,\n",
     "  \"values\": read_exc(\"K\"),\n",
     "  \"equation\": \"Ar(*)+Ar(0)=Ar(*)+Ar(0)\"\n",
     "}\n",
@@ -225,10 +227,12 @@
    "outputs": [],
    "source": [
     "kin[\"Ie\"] = {\n",
+    "  \"plato_id\": 9,\n",
     "  \"values\": read_ion(\"S\"),\n",
     "  \"equation\": \"Ar(*)+em=Arp(*)+em+em\"\n",
     "}\n",
     "kin[\"Ih\"] = {\n",
+    "  \"plato_id\": 8,\n",
     "  \"values\": read_ion(\"V\"),\n",
     "  \"equation\": \"Ar(*)+Ar(0)=Arp(*)+em+Ar(0)\"\n",
     "}"
@@ -339,11 +343,13 @@
    "outputs": [],
    "source": [
     "rad[\"PI\"] =  {\n",
+    "  \"plato_id\": 11,\n",
     "  \"values\": read_ion(\"R\"),\n",
     "  \"equation\": \"Ar(*)=Arp(*)+em\"\n",
     "}\n",
     "# First moment\n",
     "rad[\"PIp\"] =  {\n",
+    "  \"plato_id\": 11,\n",
     "  \"values\": read_ion(\"Rp\"),\n",
     "  \"equation\": \"Ar(*)=Arp(*)+em\"\n",
     "}"
